Forcing openJDK 8 upon initialization
Proposing changes to work with openJDK 8 instead of the default, currently java 11